Adjusted buildURLDeck to include createDiv wrappers around urlDescription and urlString

--- a/urls4irl/templates/home.html
+++ b/urls4irl/templates/home.html
@@ -60,7 +60,7 @@
         <div class="row justify-content-center mx-2">
             <div class="col-9 col-lg-9 mb-md-0 text-left">
                 <h2 id="UTubHeader" style="display: inline-block">Select a UTub</h2>
-                <div style="display: none">
+                <div class="createDiv" style="display: none">
                     <input type="text" id="editUTub" class="userInput">
                 </div>
                 <i id="editUTubButton" class="bi bi-pencil-square fa-2x mx-1" style="display: none; color: #545454"
@@ -74,7 +74,7 @@
         <div class="row justify-content-center mx-2">
             <div class="col-12 col-lg-12 mb-md-0 text-left">
                 <p id="UTubDescription" style="display: inline-block"></p>
-                <div style="display: none">
+                <div class="createDiv" style="display: none">
                     <textarea cols="40" rows="5" id="editUTubDescription" class="userInput"
                         placeholder="Describe the contents of your UTub (optional)"></textarea>
                 </div>
