--- a/urls4irl/templates/layout.html
+++ b/urls4irl/templates/layout.html
@@ -17,21 +17,21 @@
     <!-- JS -->
 
     <!-- Add jQuery to aid with DOM manipulation -->
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script> -->
 
     <!-- Add jQuery to aid with DOM manipulation -- local dev -->
-    <!-- <script src="/static/scripts/jquery-3.6.0.js"></script> -->
+    <script src="/static/scripts/jquery-3.6.0.js"></script>
 
 
     <!-- Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-    crossorigin="anonymous"></script> 
+    crossorigin="anonymous"></script>  -->
 
     <!-- Bootstrap -- local dev -->
-    <!-- <script src="/static/scripts/bootstrap.min.js"></script>
-    <script src="/static/scripts/bootstrap.bundle.min.js"></script> -->
+    <script src="/static/scripts/bootstrap.min.js"></script>
+    <script src="/static/scripts/bootstrap.bundle.min.js"></script>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,700" rel="stylesheet">
@@ -44,11 +44,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 
     <!-- Bootstrap -- local dev -->
-    <!-- <link rel="stylesheet" href="/static/styles/bootstrap.min.css"> -->
-    <!-- <link rel="stylesheet" href="/static/styles/bootstrap-reboot.min.css"> -->
-    <!-- <link rel="stylesheet" href="/static/styles/bootstrap-grid.min.css"> -->
+    <link rel="stylesheet" href="/static/styles/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/styles/bootstrap-reboot.min.css">
+    <link rel="stylesheet" href="/static/styles/bootstrap-grid.min.css">
 
-    <!-- FontAwesome -- commented out for local dev -->
+    <!-- FontAwesome -- comment out for local dev -->
     <!-- https://fontawesome.com/v4/get-started/ -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
