--- a/urls4irl/templates/home.html
+++ b/urls4irl/templates/home.html
@@ -62,6 +62,7 @@
                 <h2 id="UTubHeader" style="display: inline-block">Select a UTub</h2>
                 <div class="createDiv" style="display: none">
                     <input type="text" id="editUTub" class="userInput">
+                    <i id="submitEditUTubButton" class="fa fa-check-square fa-2x text-success mx-1" type="button" style="display: none" onclick="postData(event, 'editUTub-')"></i>
                 </div>
                 <i id="editUTubButton" class="bi bi-pencil-square fa-2x mx-1" style="display: none; color: #545454"
                     onclick="editUTub()"></i>
