--- a/urls4irl/templates/login.html
+++ b/urls4irl/templates/login.html
@@ -4,7 +4,7 @@
     };
 </script>
 <form id="ModalForm" method="POST" class="login-register-form" action="" novalidate>
-    <div class="modal-header" >
+    <div class="modal-header">
         <h4 class="modal-title">Login!</h4>
         <button type="button" class="close" data-dismiss="modal" aria-label="close">
             <span aria-hidden="true">&times;</span>
@@ -16,37 +16,38 @@
             <div class="form-group">
                 {{ login_form.username.label(class="form-control-label login-register-label")}}
                 {% if login_form.username.errors %}
-                    {{ login_form.username(class="form-control form-control-lg is-invalid") }}
-                    <div class="invalid-feedback">
-                        {% for error in login_form.username.errors %}
-                            <span>{{ error }}</span>
-                        {% endfor %}
-                    </div>
+                {{ login_form.username(class="form-control login-register-form-group is-invalid") }}
+                <div class="invalid-feedback">
+                    {% for error in login_form.username.errors %}
+                    <span>{{ error }}</span>
+                    {% endfor %}
+                </div>
                 {% else %}
-                    {{ login_form.username(class="form-control form-control-lg")}}
+                {{ login_form.username(class="form-control login-register-form-group")}}
                 {% endif %}
             </div>
             <div class="form-group">
                 {{ login_form.password.label(class="form-control-label login-register-label")}}
                 {% if login_form.password.errors %}
-                    {{ login_form.password(class="form-control form-control-lg is-invalid") }}
-                    <div class="invalid-feedback">
-                        {% for error in login_form.password.errors %}
-                            <span>{{ error }}</span>
-                        {% endfor %}
-                    </div>
+                {{ login_form.password(class="form-control login-register-form-group is-invalid") }}
+                <div class="invalid-feedback">
+                    {% for error in login_form.password.errors %}
+                    <span>{{ error }}</span>
+                    {% endfor %}
+                </div>
                 {% else %}
-                    {{ login_form.password(class="form-control form-control-lg")}}
+                {{ login_form.password(class="form-control login-register-form-group")}}
                 {% endif %}
             </div>
         </fieldset>
-        <div class="form-group d-flex">
-            {{ login_form.submit(class="btn btn-success col-4 mr-4")}}
-            <a class="btn btn-success col-7 to-register" href="javascript:;">Register</a>
-        </div>
+    </div>
+    <div class="modal-footer">
+        {{ login_form.submit(class="btn btn-success login-register-form-group login-buttons center-block col-4 mr-4")}}
+        <a class="btn btn-success col-7 login-register-form-group to-register login-buttons center-block"
+            href="javascript:;">Register</a>
     </div>
 </form>
 
 {% block scripts %}
-    <script src="{{ url_for('static', filename='scripts/login.js') }}"></script>
+<script src="{{ url_for('static', filename='scripts/login.js') }}"></script>
 {% endblock scripts %}
