--- a/urls4irl/templates/register_user.html
+++ b/urls4irl/templates/register_user.html
@@ -17,73 +17,73 @@
             <div class="form-group">
                 {{ register_form.username.label(class="form-control-label login-register-label")}}
                 {% if register_form.username.errors %}
-                    {{ register_form.username(class="form-control form-control-lg is-invalid") }}
-                    <div class="invalid-feedback">
-                        {% for error in register_form.username.errors %}
-                            <span>{{ error }}</span>
-                        {% endfor %}
-                    </div>
+                {{ register_form.username(class="form-control login-register-form-group is-invalid") }}
+                <div class="invalid-feedback">
+                    {% for error in register_form.username.errors %}
+                    <span>{{ error }}</span>
+                    {% endfor %}
+                </div>
                 {% else %}
-                    {{ register_form.username(class="form-control form-control-lg")}}
+                {{ register_form.username(class="form-control login-register-form-group")}}
                 {% endif %}
             </div>
             <div class="form-group">
                 {{ register_form.email.label(class="form-control-label login-register-label")}}
                 {% if register_form.email.errors %}
-                    {{ register_form.email(class="form-control form-control-lg is-invalid") }}
-                    <div class="invalid-feedback">
-                        {% for error in register_form.email.errors %}
-                            <span>{{ error }}</span>
-                        {% endfor %}
-                    </div>
+                {{ register_form.email(class="form-control login-register-form-group is-invalid") }}
+                <div class="invalid-feedback">
+                    {% for error in register_form.email.errors %}
+                    <span>{{ error }}</span>
+                    {% endfor %}
+                </div>
                 {% else %}
-                    {{ register_form.email(class="form-control form-control-lg")}}
+                {{ register_form.email(class="form-control login-register-form-group")}}
                 {% endif %}
             </div>
             <div class="form-group">
                 {{ register_form.confirm_email.label(class="form-control-label login-register-label")}}
                 {% if register_form.confirm_email.errors %}
-                    {{ register_form.confirm_email(class="form-control form-control-lg is-invalid") }}
-                    <div class="invalid-feedback">
-                        {% for error in register_form.confirm_email.errors %}
-                            <span>{{ error }}</span>
-                        {% endfor %}
-                    </div>
+                {{ register_form.confirm_email(class="form-control login-register-form-group is-invalid") }}
+                <div class="invalid-feedback">
+                    {% for error in register_form.confirm_email.errors %}
+                    <span>{{ error }}</span>
+                    {% endfor %}
+                </div>
                 {% else %}
-                    {{ register_form.confirm_email(class="form-control form-control-lg")}}
+                {{ register_form.confirm_email(class="form-control login-register-form-group")}}
                 {% endif %}
             </div>
             <div class="form-group">
                 {{ register_form.password.label(class="form-control-label login-register-label")}}
                 {% if register_form.password.errors %}
-                    {{ register_form.password(class="form-control form-control-lg is-invalid") }}
-                    <div class="invalid-feedback">
-                        {% for error in register_form.password.errors %}
-                            <span>{{ error }}</span>
-                        {% endfor %}
-                    </div>
+                {{ register_form.password(class="form-control login-register-form-group is-invalid") }}
+                <div class="invalid-feedback">
+                    {% for error in register_form.password.errors %}
+                    <span>{{ error }}</span>
+                    {% endfor %}
+                </div>
                 {% else %}
-                    {{ register_form.password(class="form-control form-control-lg")}}
-                {% endif %}                
+                {{ register_form.password(class="form-control login-register-form-group")}}
+                {% endif %}
             </div>
             <div class="form-group">
                 {{ register_form.confirm_password.label(class="form-control-label login-register-label")}}
                 {% if register_form.confirm_password.errors %}
-                    {{ register_form.confirm_password(class="form-control form-control-lg is-invalid") }}
-                    <div class="invalid-feedback">
-                        {% for error in register_form.confirm_password.errors %}
-                            <span>{{ error }}</span>
-                        {% endfor %}
-                    </div>
+                {{ register_form.confirm_password(class="form-control login-register-form-group is-invalid") }}
+                <div class="invalid-feedback">
+                    {% for error in register_form.confirm_password.errors %}
+                    <span>{{ error }}</span>
+                    {% endfor %}
+                </div>
                 {% else %}
-                    {{ register_form.confirm_password(class="form-control form-control-lg")}}
-                {% endif %}    
+                {{ register_form.confirm_password(class="form-control login-register-form-group")}}
+                {% endif %}
             </div>
         </fieldset>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        {{ register_form.submit(class="btn btn-success col-12")}}
+        {{ register_form.submit(class="btn btn-success login-register-form-group col-12")}}
     </div>
 </form>
 <div class="d-flex justify-content-center">
@@ -95,5 +95,5 @@
 </div>
 
 {% block scripts %}
-    <script src="{{ url_for('static', filename='scripts/login.js') }}"></script>
+<script src="{{ url_for('static', filename='scripts/login.js') }}"></script>
 {% endblock scripts %}
