--- a/urls4irl/templates/layout.html
+++ b/urls4irl/templates/layout.html
@@ -9,40 +9,19 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% block scripts_for_login %}
-        {% if current_user.is_authenticated %}
-            <meta name="csrf-token" content="{{ csrf_token() }}">
-        {% endif %}
+    {% if current_user.is_authenticated %}
+    <meta name="csrf-token" content="{{ csrf_token() }}">
+    {% endif %}
     {% endblock %}
-    
+
     <!-- JS -->
-    
+
     <!-- Add jQuery to aid with DOM manipulation -->
     <!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script> -->
 
     <!-- Add jQuery to aid with DOM manipulation -- local dev -->
     <script src="/static/scripts/jquery-3.6.0.js"></script>
-
-    <!-- Google Font -->
-    <!-- <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,700" rel="stylesheet"> -->
-
-    <!-- CSS -->
-    <!-- Bootstrap -->
-    <!-- https://getbootstrap.com/docs/4.3/getting-started/introduction/ -->
-    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
-
-    <!-- Bootstrap -- local dev -->
-    <link rel="stylesheet" href="/static/styles/bootstrap.min.css">
-    <!-- <link rel="stylesheet" href="/static/styles/bootstrap-reboot.min.css"> -->
-    <!-- <link rel="stylesheet" href="/static/styles/bootstrap-grid.min.css"> -->
-
-    <!-- FontAwesome -- commented out for local dev -->
-    <!-- https://fontawesome.com/v4/get-started/ -->
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"> -->
-
-    <!-- Custom -->
-    <link rel="stylesheet" href="/static/styles/app.css">
 
 
     <!-- Bootstrap Bundle with Popper -->
@@ -54,6 +33,29 @@
     <script src="/static/scripts/bootstrap.min.js"></script>
     <script src="/static/scripts/bootstrap.bundle.min.js"></script>
 
+    <!-- Google Font -->
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,700" rel="stylesheet">
+
+    <!-- CSS -->
+    <!-- Bootstrap -->
+    <!-- https://getbootstrap.com/docs/4.3/getting-started/introduction/ -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+
+    <!-- Bootstrap -- local dev -->
+    <link rel="stylesheet" href="/static/styles/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/styles/bootstrap-reboot.min.css">
+    <link rel="stylesheet" href="/static/styles/bootstrap-grid.min.css">
+
+    <!-- FontAwesome -- comment out for local dev -->
+    <!-- https://fontawesome.com/v4/get-started/ -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
+    <!-- Custom CSS adjustments -->
+    <link rel="stylesheet" href="/static/styles/app.css">
+
+
     <title>URLS4IRL</title>
 </head>
 
@@ -63,7 +65,7 @@
         <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="{{url_for('home')}}">Home</a>
+                    <a class="nav-link" href="{{url_for('main.home')}}">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Link</a>
@@ -86,17 +88,14 @@
                     <a class="nav-link" href="#"> Logged in as {{current_user.username}}</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{url_for('logout')}}">Logout</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link to_register" href="{{url_for('register_user')}}">Register</a>
+                    <a class="nav-link" href="{{url_for('users.logout')}}">Logout</a>
                 </li>
                 {% else %}
                 <li class="nav-item">
-                    <a class="nav-link" href="{{url_for('login')}}">Login</a>
+                    <a class="nav-link" href="{{url_for('users.login')}}">Login</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link to_register" href="{{url_for('register_user')}}">Register</a>
+                    <a class="nav-link to_register" href="{{url_for('users.register_user')}}">Register</a>
                 </li>
                 {% endif %}
             </ul>
@@ -104,7 +103,8 @@
     </nav>
     <!-- Navigation Bar -->
 
-
+{% block mainbody %}
+    {% if current_user.is_authenticated %}
     <!-- Main Panel View -->
 
     <main id="mainPanel" class="mx-0 bt-4 pt-0">
@@ -120,7 +120,7 @@
         {% endwith %}
 
         <div id="pageContent" class="row">
-            {% block content %}
+            {% block utubhome %}
             {% endblock %}
         </div>
 
@@ -128,17 +128,41 @@
 
     <!-- Main Panel View -->
 
+    {% endif %}
+{% endblock %}
+
     {% block modal_extender %}
     <!-- Modal -->
 
-    <div class="modal fade" id="Modal" tabindex="-1" role="dialog" aria-labelledby="FormModal" aria-hidden="true">
+    <div class="modal fade" id="confirmModal" tabindex="-1" role="dialog" aria-labelledby="FormModal" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
-                <!-- MODAL CONTENT HERE -->
+                <script type="text/javascript">
+                    if (document.querySelector('head').childElementCount === 1) {
+                        window.location.href = '/home';
+                    };
+                </script>
+
+                <form id="ModalForm" name="stepForm" class="form" method="post" action="" novalidate>
+                    <div class="modal-header">
+                        <h4 class="modal-title">Are you sure you want to delete this
+                            UTub?</h4>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body" id="modal-body">
+                        This action cannot be undone.
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        <button id="submit" type="submit" class="btn btn-danger" data-dismiss="modal">Delete</button>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
-
+    
     <!-- Modal -->
     {% endblock %}
 
