Current tests fixed

--- a/urls4irl/templates/emails/email_needs_validation_modal.html
+++ b/urls4irl/templates/emails/email_needs_validation_modal.html
@@ -7,11 +7,10 @@
     <div class="modal-header">
         <div class="email-container">
             <div id="ValidateEmailIcon">✉️</div>
-            <h1 class="modal-title validate-email-text validate-email-title">Validate Your Email!</h4>
-                <button type="button" class="close modal-close close-email-modal" data-dismiss="modal"
-                    aria-label="close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
+            <h1 class="modal-title validate-email-text validate-email-title">Validate Your Email!</h1>
+            <button type="button" class="close modal-close close-email-modal" data-dismiss="modal" aria-label="close">
+                <span aria-hidden="true">&times;</span>
+            </button>
         </div>
     </div>
     <div class="modal-body">
