--- a/urls4irl/templates/layout.html
+++ b/urls4irl/templates/layout.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% block scripts_for_login %}
-    {% if current_user.is_authenticated %}
+    {% if current_user.is_authenticated and current_user.email_confirm.is_validated %}
     <meta name="csrf-token" content="{{ csrf_token() }}">
     {% endif %}
     {% endblock %}
@@ -104,7 +104,7 @@
     <!-- Navigation Bar -->
 
     {% block mainbody %}
-    {% if current_user.is_authenticated %}
+    {% if current_user.is_authenticated and current_user.email_confirm.is_validated %}
     <!-- Main Panel View -->
 
     <main id="mainPanel" class="mx-0 bt-4 pt-0">
