--- a/urls4irl/templates/login.html
+++ b/urls4irl/templates/login.html
@@ -6,12 +6,13 @@
 <form id="ModalForm" method="POST" class="login-register-form" action="" novalidate>
     <div class="modal-header">
         <h4 class="modal-title">Login!</h4>
-        <button type="button" class="close" data-dismiss="modal" aria-label="close">
+        <button type="button" class="close close-register-login-modal" data-dismiss="modal" aria-label="close">
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
     <div class="modal-body">
         {{ login_form.hidden_tag() }}
+        <div id="ValidateEmailMessage" class="alert" role="alert"></div>
         <fieldset class="form-group">
             <div class="form-group">
                 {{ login_form.username.label(class="form-control-label login-register-label")}}
@@ -47,7 +48,3 @@
             href="javascript:;">Register</a>
     </div>
 </form>
-
-{% block scripts %}
-<script src="{{ url_for('static', filename='scripts/login.js') }}"></script>
-{% endblock scripts %}
