--- a/urls4irl/templates/register_user.html
+++ b/urls4irl/templates/register_user.html
@@ -7,12 +7,13 @@
 <form id="ModalForm" method="POST" class="login-register-form" action="" novalidate>
     <div class="modal-header">
         <h4 class="modal-title">Register</h4>
-        <button type="button" class="close" data-dismiss="modal" aria-label="close">
+        <button type="button" class="close close-register-login-modal" data-dismiss="modal" aria-label="close">
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
     <div class="modal-body">
         {{ register_form.hidden_tag() }}
+        <div id="ValidateEmailMessage" class="alert" role="alert"></div>
         <fieldset class="form-group">
             <div class="form-group">
                 {{ register_form.username.label(class="form-control-label login-register-label")}}
@@ -86,14 +87,10 @@
         {{ register_form.submit(class="btn btn-success login-register-form-group col-12")}}
     </div>
 </form>
-<div class="d-flex justify-content-center">
+<div class="d-flex justify-content-center register-to-login-footer">
     <div class="border-top pb-3">
         <small class="text-muted">
             <a class="to-login" href="javascript:;">Already a user? Login</a>
         </small>
     </div>
 </div>
-
-{% block scripts %}
-<script src="{{ url_for('static', filename='scripts/login.js') }}"></script>
-{% endblock scripts %}
