--- a/urls4irl/templates/emails/email_needs_validation_modal.html
+++ b/urls4irl/templates/emails/email_needs_validation_modal.html
@@ -17,7 +17,7 @@
         {{ validate_email_form.hidden_tag() }}
         <p id="ValidateEmailText" class="validate-email-text">Your email address has not been validated. To complete
             your registration, please click the button below to receive a validation email.</p>
-        <div id="ValidateEmailMessage" class="alert" role="alert"></div>
+        <div id="ValidateEmailMessage" class="alert alert-banner-email-validation-hide" role="alert"></div>
         <div class="modal-footer">
             <a class="btn btn-warning col-4 login-register-form-group login-buttons center-block close-email-modal"
                 href="javascript:;">Close</a>
