Final integration of email validation

--- a/urls4irl/templates/emails/email_confirmation.html
+++ b/urls4irl/templates/emails/email_confirmation.html
@@ -160,7 +160,9 @@
                         <td align="left" bgcolor="#ffffff"
                             style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;">
                             <p style="margin: 0;">Tap the button below to confirm your email address. If you didn't
-                                create an account with <a href="https://urls4irl.app">urls4irl</a>, you can safely
+                                create an account with <a
+                                    href="{{ url_for('main.splash', _external=True) }}">urls4irl</a>, you can
+                                safely
                                 delete this email.</p>
                         </td>
                     </tr>
@@ -175,7 +177,7 @@
                                         <table border="0" cellpadding="0" cellspacing="0">
                                             <tr>
                                                 <td align="center" bgcolor="#28a745" style="border-radius: 6px;">
-                                                    <a href="https://www.blogdesire.com" target="_blank"
+                                                    <a href="{{ email_confirmation_url }}" target="_blank"
                                                         style="display: inline-block; padding: 16px 36px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; color: #ffffff; text-decoration: none; border-radius: 6px;">Let's
                                                         Do This</a>
                                                 </td>
@@ -194,8 +196,8 @@
                             style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;">
                             <p style="margin: 0;">If that doesn't work, copy and paste the following link in your
                                 browser:</p>
-                            <p style="margin: 0;"><a href="https://blogdesire.com"
-                                    target="_blank">https://blogdesire.com/xxx-xxx-xxxx</a></p>
+                            <p style="margin: 0;"><a href="{{ email_confirmation_url }}"
+                                    target="_blank">{{ email_confirmation_url }}</a></p>
                         </td>
                     </tr>
                     <!-- end copy -->
