--- a/urls4irl/templates/register_user.html
+++ b/urls4irl/templates/register_user.html
@@ -13,7 +13,7 @@
     </div>
     <div class="modal-body">
         {{ register_form.hidden_tag() }}
-        <div id="ValidateEmailMessage" class="alert alert-banner-email-validation-hide" role="alert"></div>
+        <div id="EmailAlertBanner" class="alert alert-banner-email-validation-hide" role="alert"></div>
         <fieldset class="form-group">
             <div class="form-group">
                 {{ register_form.username.label(class="form-control-label login-register-label")}}
