--- a/urls4irl/templates/email_validation/email_confirmation.html
+++ b/urls4irl/templates/email_validation/email_confirmation.html
@@ -234,7 +234,7 @@
                     <!-- start permission -->
                     <tr>
                         <td align="center" bgcolor="#343a40"
-                            style="padding: 12px 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 20px; color: #666;">
+                            style="padding: 12px 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 20px; color: #f1efef;">
                             <p style="margin: 0;">You received this email because we received a request for email
                                 validation for your account. If you didn't request email validation you can safely
                                 delete this email.</p>
