--- a/urls4irl/templates/login.html
+++ b/urls4irl/templates/login.html
@@ -12,7 +12,7 @@
     </div>
     <div class="modal-body">
         {{ login_form.hidden_tag() }}
-        <div id="ValidateEmailMessage" class="alert alert-banner-email-validation-hide" role="alert"></div>
+        <div id="EmailAlertBanner" class="alert alert-banner-email-validation-hide" role="alert"></div>
         <fieldset class="form-group">
             <div class="form-group">
                 {{ login_form.username.label(class="form-control-label login-register-label")}}
@@ -27,7 +27,7 @@
                 {{ login_form.username(class="form-control login-register-form-group")}}
                 {% endif %}
             </div>
-            <div class="form-group">
+            <div class="form-group forgot-password-form-group">
                 {{ login_form.password.label(class="form-control-label login-register-label")}}
                 {% if login_form.password.errors %}
                 {{ login_form.password(class="form-control login-register-form-group is-invalid") }}
@@ -39,6 +39,11 @@
                 {% else %}
                 {{ login_form.password(class="form-control login-register-form-group")}}
                 {% endif %}
+            </div>
+            <div class="form-group" id="ForgotPasswordLink">
+                <small class="text-muted">
+                    <a class="to-forgot-password" href="javascript:;">Forgot your password?</a>
+                </small>
             </div>
         </fieldset>
     </div>
