--- a/urls4irl/templates/layout.html
+++ b/urls4irl/templates/layout.html
@@ -138,9 +138,9 @@
     </div>
 
     {% else %}
-    <div class="modal fade" id="loginRegisterModal" tabindex="-1" role="dialog" aria-labelledby="FormModal"
+    <div class="modal fade" id="SplashModal" tabindex="-1" role="dialog" aria-labelledby="FormModal"
         aria-hidden="true">
-        <div class="modal-dialog login-register-content" role="document">
+        <div class="modal-dialog" id="SplashModal" role="document">
             <div class="modal-content">
             </div>
         </div>
