--- a/urls4irl/templates/password_reset/forgot_password.html
+++ b/urls4irl/templates/password_reset/forgot_password.html
@@ -6,7 +6,7 @@
 <form id="ModalForm" method="POST" class="login-register-form" action="" novalidate>
     <div class="modal-header">
         <h4 class="modal-title">Forgot your password?</h4>
-        <button type="button" class="close close-register-login-modal" data-dismiss="modal" aria-label="close">
+        <button type="button" class="close close-modal" data-dismiss="modal" aria-label="close">
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
@@ -28,7 +28,7 @@
                 {% endif %}
             </div>
         </fieldset>
-        <div id="EmailAlertBanner" class="alert alert-banner-email-validation-hide" role="alert"></div>
+        <div id="SplashModalAlertBanner" class="alert alert-banner-splash-modal-hide" role="alert"></div>
     </div>
     <div class="modal-footer">
         {{ forgot_password_form.submit(class="btn btn-success login-register-form-group login-buttons center-block col-12")}}
