--- a/urls4irl/templates/password_reset/reset_password.html
+++ b/urls4irl/templates/password_reset/reset_password.html
@@ -15,32 +15,33 @@
         {{ reset_password_form.hidden_tag() }}
         <fieldset class="form-group">
             <div class="form-group">
-                {{ reset_password_form.password.label(class="form-control-label login-register-label")}}
-                {% if reset_password_form.password.errors %}
-                {{ reset_password_form.password(class="form-control login-register-form-group is-invalid") }}
+                {{ reset_password_form.new_password.label(class="form-control-label login-register-label")}}
+                {% if reset_password_form.new_password.errors %}
+                {{ reset_password_form.new_password(class="form-control login-register-form-group is-invalid") }}
                 <div class="invalid-feedback">
-                    {% for error in reset_password_form.password.errors %}
+                    {% for error in reset_password_form.new_password.errors %}
                     <span>{{ error }}</span>
                     {% endfor %}
                 </div>
                 {% else %}
-                {{ reset_password_form.password(class="form-control login-register-form-group")}}
+                {{ reset_password_form.new_password(class="form-control login-register-form-group")}}
                 {% endif %}
             </div>
             <div class="form-group">
-                {{ reset_password_form.confirm_password.label(class="form-control-label login-register-label")}}
-                {% if reset_password_form.confirm_password.errors %}
-                {{ reset_password_form.confirm_password(class="form-control login-register-form-group is-invalid") }}
+                {{ reset_password_form.confirm_new_password.label(class="form-control-label login-register-label")}}
+                {% if reset_password_form.confirm_new_password.errors %}
+                {{ reset_password_form.confirm_new_password(class="form-control login-register-form-group is-invalid") }}
                 <div class="invalid-feedback">
-                    {% for error in reset_password_form.confirm_password.errors %}
+                    {% for error in reset_password_form.confirm_new_password.errors %}
                     <span>{{ error }}</span>
                     {% endfor %}
                 </div>
                 {% else %}
-                {{ reset_password_form.confirm_password(class="form-control login-register-form-group")}}
+                {{ reset_password_form.confirm_new_password(class="form-control login-register-form-group")}}
                 {% endif %}
             </div>
         </fieldset>
+        <div id="SplashModalAlertBanner" class="alert alert-banner-splash-modal-hide" role="alert"></div>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
