--- a/urls4irl/templates/login.html
+++ b/urls4irl/templates/login.html
@@ -12,7 +12,7 @@
     </div>
     <div class="modal-body">
         {{ login_form.hidden_tag() }}
-        <div id="EmailAlertBanner" class="alert alert-banner-email-validation-hide" role="alert"></div>
+        <div id="SplashModalAlertBanner" class="alert alert-banner-splash-modal-hide" role="alert"></div>
         <fieldset class="form-group">
             <div class="form-group">
                 {{ login_form.username.label(class="form-control-label login-register-label")}}
