--- a/urls4irl/templates/password_reset/reset_password_html_email.html
+++ b/urls4irl/templates/password_reset/reset_password_html_email.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Email Confirmation</title>
+    <title>Password Reset</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style type="text/css">
         /**
@@ -111,7 +111,7 @@
     <!-- start preheader -->
     <div class="preheader"
         style="display: none; max-width: 0; max-height: 0; overflow: hidden; font-size: 1px; line-height: 1px; color: #fff; opacity: 0;">
-        Confirm your account at URLS4IRL.
+        Password reset instructions from URLS4IRL.
     </div>
     <!-- end preheader -->
 
@@ -132,7 +132,7 @@
                             style="padding: 36px 24px 0; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; border-top: 3px solid #d4dadf;">
                             <h1
                                 style="margin: 0; font-size: 32px; font-weight: 700; letter-spacing: -1px; line-height: 48px;">
-                                Confirm Your Email Address</h1>
+                                Reset Your Password</h1>
                         </td>
                     </tr>
                 </table>
@@ -159,11 +159,9 @@
                     <tr>
                         <td align="left" bgcolor="#ffffff"
                             style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;">
-                            <p style="margin: 0;">Tap the button below to confirm your email address. If you didn't
-                                create an account with <a
-                                    href="{{ url_for('main.splash', _external=True) }}">URLS4IRL</a>, you can
-                                safely
-                                delete this email.</p>
+                            <p style="margin: 0;">To reset your password, please click the button below. If you didn't request a password reset for your <a
+                                    href="{{ url_for('main.splash', _external=True) }}">URLS4IRL</a> account, you can
+                                ignore this email.</p>
                         </td>
                     </tr>
                     <!-- end copy -->
@@ -176,10 +174,10 @@
                                     <td align="center" bgcolor="#ffffff" style="padding: 12px;">
                                         <table border="0" cellpadding="0" cellspacing="0">
                                             <tr>
-                                                <td align="center" bgcolor="#28a745" style="border-radius: 6px;">
-                                                    <a href="{{ email_confirmation_url }}" target="_blank"
-                                                        style="display: inline-block; padding: 16px 36px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; color: #ffffff; text-decoration: none; border-radius: 6px;">Let's
-                                                        Do This</a>
+                                                <td align="center" bgcolor="#e6ed15" style="border-radius: 6px;">
+                                                    <a href="{{ password_reset_url }}" target="_blank"
+                                                        style="display: inline-block; padding: 16px 36px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; color: #131212; text-decoration: none; border-radius: 6px;">Reset
+                                                        Password</a>
                                                 </td>
                                             </tr>
                                         </table>
@@ -194,10 +192,9 @@
                     <tr>
                         <td align="left" bgcolor="#ffffff"
                             style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;">
-                            <p style="margin: 0;">If that doesn't work, copy and paste the following link in your
-                                browser:</p>
-                            <p style="margin: 0;"><a href="{{ email_confirmation_url }}"
-                                    target="_blank">{{ email_confirmation_url }}</a></p>
+                            <p style="margin: 0;">If the button doesn't work, you can copy and paste the following link in your browser:</p>
+                            <p style="margin: 0;"><a href="{{ password_reset_url }}"
+                                    target="_blank">{{ password_reset_url }}</a></p>
                         </td>
                     </tr>
                     <!-- end copy -->
@@ -206,7 +203,7 @@
                     <tr>
                         <td align="left" bgcolor="#ffffff"
                             style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px; border-bottom: 3px solid #d4dadf">
-                            <p style="margin: 0;">Cheers,<br> Team at URLS4IRL</p>
+                            <p style="margin: 0;">Best regards,<br> Team at URLS4IRL</p>
                         </td>
                     </tr>
                     <!-- end copy -->
@@ -235,9 +232,7 @@
                     <tr>
                         <td align="center" bgcolor="#343a40"
                             style="padding: 12px 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 20px; color: #f1efef;">
-                            <p style="margin: 0;">You received this email because we received a request for email
-                                validation for your account. If you didn't request email validation you can safely
-                                delete this email.</p>
+                            <p style="margin: 0;">You received this email because we received a request to reset your password for your account. If you didn't request a password reset, please ignore this email.</p>
                         </td>
                     </tr>
                     <!-- end permission -->
