--- a/urls4irl/templates/register_user.html
+++ b/urls4irl/templates/register_user.html
@@ -2,6 +2,7 @@
     if (document.querySelector('head').childElementCount === 1) {
         window.location.href = '/';
     };
+    let isValidSplashForm = true;
 </script>
 
 <form id="ModalForm" method="POST" class="login-register-form" action="" novalidate>
