--- a/urls4irl/templates/splash.html
+++ b/urls4irl/templates/splash.html
@@ -34,14 +34,14 @@
 <script src="{{ url_for('static', filename='scripts/splash.js') }}"></script>
 {% if email_validation_modal is defined and email_validation_modal %}
 {% if expired_token is defined and expired_token  %}
-<script>{{ email_validation_modal }}("{{ expired_token }}")</script>
+<script>emailValidationModalOpener("{{ expired_token }}")</script>
 {% else %}
-<script>{{ email_validation_modal }}()</script>
+<script>emailValidationModalOpener()</script>
 {% endif %}
 {% endif %}
 
 {% if forgot_password_modal is defined and forgot_password_modal %}
-<script>{{ forgot_password_modal }}()</script>
+<script>resetPasswordModalOpener()</script>
 {% endif %}
 
 {% endif %}
